src/unit_tests/TypeChecker/fail/formal-self.cl
class Main inherits IO {
    a: Int;

    main(): Int{ 1 };
    
    fun(self: Int, b:String, a:IO): Int {
        1
    };
};
